--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
   "name": "sports-club-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "build": "tsc --project tsconfig.build.json",
-    "start": "node dist/index.js"
+    "build": "tsc",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "Nayim Hasan",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/hpp": "^0.2.6",
     "@types/node": "^22.8.7",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
