--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "prestart": "npm run build"
   },
   "keywords": [],
   "author": "Nayim Hasan",
