feat: update start script in package.json to increase memory limit for Node.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/index.js",
+    "start": "NODE_OPTIONS='--max-old-space-size=512' node ./dist/index.js",
     "dev": "nodemon",
     "prestart": "npm run build"
   },
