--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && mkdir -p dist/doc && cp src/doc/swagger-doc.yaml dist/doc/",
     "start": "NODE_OPTIONS='--max-old-space-size=512' node ./dist/index.js",
     "dev": "nodemon",
     "prestart": "npm prune --production && npm run build"
