--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsc && mkdir -p dist/doc && cp src/doc/swagger-doc.yaml dist/doc/",
     "start": "NODE_OPTIONS='--max-old-space-size=512' node ./dist/index.js",
     "dev": "nodemon",
-    "prestart": "npm prune --production && npm run build"
+    "prestart": "npm prune --omit=dev && npm run build"
   },
   "keywords": [],
   "author": "Nayim Hasan",
